[package]
name="signal-sema-storage"
version="0.2.0"
edition="2024"
rust-version="1.89"
license="MIT OR Apache-2.0"
repository="https://github.com/LiGoldragon/signal-sema-storage"
description="Typed wire contract for the central language-engine Sema storage daemon"
[dependencies]
rkyv={version="0.8",features=["bytecheck"]}
content-identity={git="https://github.com/LiGoldragon/protos.git",rev="e9983d6220856a011886145ed0ef0cc41c9bf597"}
core-schema={git="https://github.com/LiGoldragon/core-schema.git",rev="cee7f0873c8ccfba0afe09cbb40de531c9e73077"}
signal-frame={git="https://github.com/LiGoldragon/signal-frame.git",rev="f46872e7e8edae5264c892443d415a273b231234",default-features=false}
core-logos={git="https://github.com/LiGoldragon/core-logos.git",rev="7fabf6d42f458963c6b4bf526284ba88087a71c7"}
name-table={git="https://github.com/LiGoldragon/protos.git",rev="e9983d6220856a011886145ed0ef0cc41c9bf597"}
thiserror="2"
[dev-dependencies]
tempfile="3"
[lints.rust]
unsafe_code="forbid"
