[package]
name="signal-sema-storage"
version="0.2.0"
edition="2024"
rust-version="1.89"
license="MIT OR Apache-2.0"
repository="https://github.com/LiGoldragon/signal-sema-storage"
description="Typed wire contract for the central language-engine Sema storage daemon"
[dependencies]
rkyv={version="0.8",features=["bytecheck"]}
content-identity={git="https://github.com/LiGoldragon/protos.git",rev="d2912838b9ea18eae9ba3f7172e07e92823fa323"}
core-schema={git="https://github.com/LiGoldragon/core-schema.git",rev="90e71212f86507338f11913d334d4c12a225b781"}
signal-frame={git="https://github.com/LiGoldragon/signal-frame.git",rev="f46872e7e8edae5264c892443d415a273b231234",default-features=false}
core-logos={git="https://github.com/LiGoldragon/core-logos.git",rev="e0cec4110fd3b79c1258cf145e3791e34f7349d4"}
name-table={git="https://github.com/LiGoldragon/protos.git",rev="d2912838b9ea18eae9ba3f7172e07e92823fa323"}
thiserror="2"
[dev-dependencies]
tempfile="3"
[lints.rust]
unsafe_code="forbid"
